Some changes Add new homework

--- a/ex1.html
+++ b/ex1.html
@@ -8,6 +8,8 @@
 <li>List item 1</li>
 <ol type="a">
 	<li>Nested item 1.1</li>
+	
+	<li>Nested item 1.2</li>
 	<li>Nested item 1.2</li>
 </ol>
 <li>List item 2</li>
